--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
     "gh-pages": "^6.2.0",
     "prettier": "^3.3.2"
   },
-  "homepage": "https://oreshkin-ay.github.io/"
+  "homepage": "https://oreshkin-ay.github.io/oreshkin-ay.github.io"
 }
