--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-loading-skeleton": "^3.5.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
